--- a/frontend/src/components/logi.htm
+++ b/frontend/src/components/logi.htm
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AgriDiagnosis</title>
-    <link rel="stylesheet" href="styles/logi.css">
-    <link rel="stylesheet" href="styles/scroll.css">
+    <link rel="stylesheet" href="../styles/logi.css">
+    <link rel="stylesheet" href="../styles/scroll.css">
 </head>
 
 <body>
