--- a/frontend/src/components/history.htm
+++ b/frontend/src/components/history.htm
@@ -26,16 +26,17 @@
 
         <div class="b">
             <h1 style = 'text-align : center;position : relative;top : 100px;'>History Page</h1>
-            <div class="project">
+            <a href="projects.htm" ><div class="project">
                 <img id="p" src="plant.png">
                     <div >
-                        <a href="projects.htm" style="text-decoration: none;" ><h1 style = 'position : relative;left : 350px;color:darkgreen;'>Project1</h1>
+                        <h1 style = 'position : relative;left : 350px;color:darkgreen;'>Project1</h1>
                         <p style = 'font-size: 20px; color:black;z-index:10;' >
                             The standard chunk of Lorem Ipsum used since thLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
                         </p> 
-                        </a>
+                        
                     </div>
             </div>
+            </a>
         </div>
     </main>
     <script>
@@ -62,7 +63,7 @@
             else if(a<0.7){
                 leaf.content = '🍀'
             }            leaf.style.left = `${Math.random() * 100}vw`; // Random horizontal position
-            const fallDuration = Math.random() * 2 + 2; // Random fall duration between 5s and 10s
+            const fallDuration = Math.random() * 1 + 1; // Random fall duration between 5s and 10s
             leaf.style.animationDuration = `${fallDuration}s`;
             document.body.appendChild(leaf);
 
