--- a/frontend/src/components/blog.htm
+++ b/frontend/src/components/blog.htm
@@ -105,7 +105,7 @@
         </div>
     </footer>
 
-    <script src="scripts.js"></script>
+    <script src="../script/blog.js"></script>
 </body>
 
 </html>
